force-app/main/default/objects/LLC_BI__FSC_Synchronization__e/LLC_BI__FSC_Synchronization__e.object-meta.xml
<CustomObject>
    <description>The queue contains instructions that are used to synchronize content between nCino and Financial Services Cloud.</description>
    <label>FSC Synchronization</label>
    <pluralLabel>FSC Synchronization</pluralLabel>
</CustomObject>