force-app/main/default/objects/LLC_BI__FSC_Synchronization__e/fields/LLC_BI__Action__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action__c</fullName>
    <description>Indicates the action that the synchronization process should perform.</description>
    <label>Action</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>