force-app/main/default/objects/LLC_BI__FSC_Synchronization__e/fields/LLC_BI__Parameters__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parameters__c</fullName>
    <description>Contains the parameters that will be passed to the synchronization process.</description>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>