force-app/main/default/objects/LLC_BI__FSC_Synchronization__e/fields/LLC_BI__Process__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Process__c</fullName>
    <description>Indicates the process that must be used to synchronize data.</description>
    <label>Process</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>